k8s/asgard/infrastructure/authentik/namespace.yaml
# k8s/asgard/infrastructure/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
